[project]
name = "sing-parser"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "odesli>=0.0.2",
    "orjson>=3.11.4",
    "playwright>=1.55.0",
    "playwright-stealth>=2.0.0",
    "pyexecjs>=1.5.1",
    "pyquery>=2.0.1",
    "sanic>=25.3.0",
    "tldextract>=5.3.0",
    "toml>=0.10.2",
    "music_parse",
]
[tool.uv.sources]
music_parse = {path = "./music_parse-0.1.0-cp313-cp313-manylinux_2_34_x86_64.whl"}
